# Rusty-Rubik

./: .gitignore  Cargo.toml  LICENSE.md  README.md  header.html  pruning_tables.checksum
.circleci/: config.yaml  config.yml
scripts/: verify_checksum.sh
src/: cube.rs  lib.rs  main.rs  parser.rs  pruning.rs  puzzle.rs  solver.rs  tests.rs
tests/: tests.rs
