[package]
name = "rsubik"
version = "0.1.0"
authors = ["Brandon Lin <brandbest1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
strum = "0.18.0"
strum_macros = "0.18.0"
priority-queue = "1.0.0"