[package]
name = "rusty-rubik"
version = "0.1.1"
description = "A crate providing interaction and solvers for the Rubik's Cube."
repository = "https://github.com/esqu1/Rusty-Rubik"
authors = ["Brandon Lin <brandbest1@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE.md"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
strum = "0.18.0"
strum_macros = "0.18.0"
priority-queue = "1.0.0"
clap = "3.0.0-beta.1"
bincode = "1.2.1"
